@@ -39,14 +39,16 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
             .csrf(AbstractHttpConfigurer::disable)
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Configuração CORS explícita
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Aplica a config de CORS abaixo
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authenticationProvider(authenticationProvider())
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
             .authorizeHttpRequests(auth -> auth
-                // Rotas Públicas
-                .requestMatchers("/api/login/**", "/api/recuperar-senha/**").permitAll()
-                .requestMatchers(HttpMethod.POST, "/api/usuarios").permitAll() // Cadastro
+                // --- ROTAS PÚBLICAS (Login e Cadastro) ---
+                .requestMatchers("/api/login", "/api/login/**", "/api/recuperar-senha/**").permitAll()
+                .requestMatchers(HttpMethod.POST, "/api/usuarios").permitAll()
+                
+                // Rotas de Leitura Públicas (se desejar)
                 .requestMatchers(HttpMethod.GET, 
                     "/api/campanhas/ativas", 
                     "/api/noticias/**", 
@@ -54,18 +56,21 @@ public class SecurityConfig {
                     "/api/beneficios", 
                     "/api/locais-coleta/**", 
                     "/api/tipos-materiais",
-                    "/api/orientacoes/ativas").permitAll()
+                    "/api/orientacoes/ativas",
+                    "/api/empresas-recicladoras", // Adicionado para evitar erro no dashboard
+                    "/api/empresas-apoiadoras"    // Adicionado para evitar erro no dashboard
+                ).permitAll()
 
-                // Rotas Admin
+                // --- ROTAS DE ADMINISTRAÇÃO ---
                 .requestMatchers("/api/admin/**", "/api/conteudo/**", "/api/estatisticas/**").hasAuthority("admin")
                 .requestMatchers(HttpMethod.POST, "/api/campanhas", "/api/noticias", "/api/beneficios", "/api/tipos-materiais", "/api/orientacoes").hasAuthority("admin")
                 .requestMatchers(HttpMethod.PUT, "/api/campanhas/**", "/api/noticias/**", "/api/beneficios/**", "/api/tipos-materiais/**", "/api/orientacoes/**").hasAuthority("admin")
                 .requestMatchers(HttpMethod.DELETE, "/api/**").hasAuthority("admin") 
 
-                // Rotas Recicladora e Admin
+                // --- ROTAS RECICLADORA E ADMIN ---
                 .requestMatchers("/api/locais-coleta/**", "/api/dias-horarios/**", "/api/materiais/**").hasAnyAuthority("admin", "recicladora")
                 
-                // Rotas Autenticadas (Todas as outras)
+                // --- QUALQUER OUTRA ROTA EXIGE LOGIN ---
                 .anyRequest().authenticated()
             );
 
@@ -90,12 +95,23 @@ public class SecurityConfig {
         return config.getAuthenticationManager();
     }
 
+    // =====================================================================
+    // CONFIGURAÇÃO CRÍTICA DO CORS (Permite conexão do Frontend)
+    // =====================================================================
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:3000")); // Adicione as URLs do seu front
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+        
+        // Adicionei TODAS as portas comuns de desenvolvimento frontend
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://127.0.0.1:5500", // VS Code Live Server (IP)
+            "http://localhost:5500", // VS Code Live Server (Nome)
+            "http://localhost:3000", // React / Node
+            "http://localhost:4200"  // Angular
+        ));
+        
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept"));
         configuration.setAllowCredentials(true);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
